# smartdigest-tgbot

./: .env.example  .gitignore  README.md  channels.yaml.example  pyproject.toml
.github/workflows/: ci.yml
deploy/: smartdigest-bot.service
src/smartdigest_bot/: __init__.py  __main__.py  app.py  config.py  exceptions.py  logging_setup.py  models.py
src/smartdigest_bot/bootstrap/: channels_loader.py  first_run.py
src/smartdigest_bot/digest/: digest_service.py  perplexity_client.py  prompt_builder.py
src/smartdigest_bot/fetching/: channel_fetcher.py  parser.py
src/smartdigest_bot/scheduling/: jobs.py  scheduler.py
src/smartdigest_bot/storage/: channels_repo.py  db.py  deliveries_repo.py  digest_windows_repo.py  digests_repo.py  migrations.py  posts_repo.py
src/smartdigest_bot/telegram/: bot.py  commands.py  sender.py
src/smartdigest_bot/utils/: datetime.py  text.py
tests/: test_commands.py  test_digest_service.py  test_first_run.py  test_jobs.py  test_parser.py  test_sender.py  test_storage.py
